SW-18016 - Fix scrollbar issue on finish page

--- a/themes/Backend/ExtJs/backend/_resources/resources/themes/stylesheets/shopware-ui/modules/_first_run_wizard.scss
+++ b/themes/Backend/ExtJs/backend/_resources/resources/themes/stylesheets/shopware-ui/modules/_first_run_wizard.scss
@@ -155,7 +155,7 @@
     padding: 15px;
     text-decoration: none;
     color: #3F5D71;
-    margin: 0 10px 10px 0;
+    margin: 0 0 10px 0;
     overflow: hidden;
     border-radius: 3px;
 
